--- a/src/app/news-details/news-details.component.html
+++ b/src/app/news-details/news-details.component.html
@@ -2,7 +2,7 @@
   <div class="card-group">
     <div class="card cardsize">
       <div class="row">
-        <div class='col-md-6' *ngFor="let result of results">
+        <div class='col-md-6 box' *ngFor="let result of results">
           <img class="card-img-top cardimg" src="{{result.urlToImage}}" alt="No image" width="350px" height="250px">
           <div class="card-body">
             <h4 class="card-title"> <a href="{{result.url}}" target="blank">{{result.title}}</a></h4>
