--- a/src/app/news-details/news-details.component.html
+++ b/src/app/news-details/news-details.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <div class="card-group">
     <div class="card cardsize">
       <div class="row">
@@ -15,3 +15,35 @@
     </div>
   </div>
 </div>
+ -->
+
+
+
+ <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+<section>
+<div class="container">
+  <div class="card-group">
+    <div class="card cardsize">
+      <div class="row">
+        <div class='col-md-4' *ngFor="let result of results">
+    
+       <!--  <h2 class="text-center"><span>Bootstrap 4 Cards</span>Created with <i class="fa fa-heart"></i> from<a href="http://grafreez.com"> Grafreez.com</a></h2>      -->
+       
+            
+          <div class="card card-01">
+           <img class="card-img-top cardimg" src="{{result.urlToImage}}" alt="No image" class="img-fluid">
+          <div class="card-body">
+            <span class="badge-box"><i class="fa fa-check"></i></span>
+            <h4 class="card-title"> <a href="{{result.url}}" target="blank">{{result.title}}</a></h4>
+            <p class="card-text">{{result.description}}</p>
+            <a href="#" class="btn btn-primary" (click)="add(result)">Add</a>
+          </div>
+        </div>
+        </div>
+          </div>
+    </div>
+    </div>
+    </div>
+</section>
+
+
