--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,134 +1,148 @@
-body {
-  background: #2E2F40;
-  font-family: 'Montserrat', sans-serif;
+/*.bg-primary {
+ background-color: #000 !important;
 }
 
-nav {
-  max-width: 1000px;
-  height: 0px;
-  border-bottom: 100px solid #860255;
-  border-left: 40px solid transparent;
-  position: relative;
-  margin: 0 auto;
-  box-shadow: 20px 17px 27px rgba(0, 0, 0, 0.15);
-}
-nav::before {
-  content: '';
-  margin-top: 10%;
-  display: block;
-}
-nav .inner {
-  width: 100%;
-  height: 100px;
-  position: absolute;
-  right: 0;
-  overflow: hidden;
-  background: #860255;
-  /* Webkit (Safari/Chrome 10) */
-  background-image: -webkit-gradient(linear, left top, right top, color-stop(0, #860255), color-stop(100, #EF4B3F));
-  /* IE10+ */
-  background-image: -ms-linear-gradient(left, #860255 0%, #EF4B3F 100%);
-  /* Mozilla Firefox */
-  background-image: -moz-linear-gradient(left, #860255 0%, #EF4B3F 100%);
-  /* Opera */
-  background-image: -o-linear-gradient(left, #860255 0%, #EF4B3F 100%);
-  /* Webkit (Chrome 11+) */
-  background-image: -webkit-linear-gradient(left, #860255 0%, #EF4B3F 100%);
-  /* W3C Markup */
-  background-image: linear-gradient(to right, #860255 0%, #EF4B3F 100%);
-}
-nav .active {
-  top: 80px !important;
-  position: relative;
-  transition: all .3s;
-}
-nav ul {
-  float: right;
-  list-style-type: none;
-  line-height: 6.2;
-  padding: 0;
-  margin: 0;
-  transition: all .3s;
-  position: relative;
-  top: 0;
-}
-nav li {
+.bg-circle
+{
   display: inline-block;
-  margin: 0;
-}
-nav li::before {
-  content: ' / ';
-  margin: 0 10px;
-  color: rgba(255, 255, 255, 0.5);
-}
-nav li:first-child::before {
-  display: none;
-}
-nav .search {
-  width: 80px;
-  height: 0px;
-  float: right;
-  color: #fff;
-  font-size: 18px;
-  border-bottom: 100px solid rgba(0, 0, 0, 0.1);
-  border-left: 40px solid transparent;
-  position: relative;
-  transition: .3s;
-}
-nav .search::before {
-  content: '';
-}
-nav .search:hover {
-  border-bottom: 100px solid rgba(0, 0, 0, 0.3);
-}
-nav .fa-search {
-  position: relative;
-  left: 25px;
-  top: 38px;
-}
-nav input[type=search] {
-  background: transparent;
-  border: none;
-  border-bottom: 2px solid #fff;
-  -webkit-appearance: none;
-}
-nav input.search_box {
-  position: absolute;
-  font-size: 16px;
-  color: #fff;
-  line-height: 4;
-  top: -100px;
-  width: 320px;
-  right: 130px;
-  transition: all .3s;
-}
-nav .search_box_active {
-  top: 15px !important;
-  transition: all .3s;
-}
-nav input:focus {
-  outline: none;
-}
-nav input::-webkit-input-placeholder {
-  color: #fff;
-}
-nav input[type="search"]::-webkit-search-cancel-button {
-  -webkit-appearance: none;
-  height: 1px;
-  width: 15px;
-  background: transparent;
+  width: 60px;
+  height: 60px;
+  padding: 14px 4px;
+  color: #ececec;
+  text-align: center;
   border-radius: 50%;
 }
-nav input[type="search"]::-webkit-search-cancel-button::before {
-  content: '+';
-  color: #fff;
-  font-weight: bold;
-  -webkit-transform: rotate(45deg);
-  font-size: 21px;
-  position: absolute;
-  top: -10px;
+
+.bg-circle-outline
+{
+  width: 50px;
+  height: 50px;
+  color:smoke;
+  padding: 8px 2px;
+  border: 2px solid;
+  border-color: smoke;
+  border-radius: 50%;
 }
-nav a {
-  color: #fff;
-  text-decoration: none;
+
+
+.bg-circle a, a:hover, .media a:focus
+{
+  text-decoration: none !important;
+  outline: none;
+  color: #ececec;
 }
+.bg-circle-outline a, a:hover, .media a:focus
+{
+  text-decoration: none !important;
+  outline: none;
+  color: #ececec;
+}
+*/
+
+
+
+
+.header-font {
+ font-family: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
+ color: #fd1506
+;
+}
+.fa-facebook{
+   color:#3b5998
+;
+}
+.fa-linkedin{
+   color:#0077B5
+;
+}
+.fa-twitter{
+   color:#4099FF
+;
+}
+.fa-google{
+   color:#d34836
+;
+}
+.bg-primary {
+background-color: #000 !important;
+}.bg-circle
+{
+ display: inline-block;
+ width: 60px;
+ height: 60px;
+ padding: 14px 4px;
+ color: #ececec
+;
+ text-align: center;
+ border-radius: 50%;
+}.bg-circle-outline
+{
+ width: 50px;
+ height: 50px;
+ color:smoke;
+ padding: 8px 2px;
+ border: 2px solid;
+ border-color: smoke;
+ border-radius: 50%;
+}.bg-circle a, a:hover, .media a:focus
+{
+ text-decoration: none !important;
+ outline: none;
+ color: #ececec
+;
+}
+.bg-circle-outline a, a:hover, .media a:focus
+{
+ text-decoration: none !important;
+ outline: none;
+ color: #ececec
+;
+}
+.footer {
+    background: #EDEFF1
+;
+    height: auto;
+    padding-bottom: 30px;
+    position: relative;
+    width: 100%;
+    border-bottom: 1px solid #CCCCCC
+;
+    border-top: 1px solid #DDDDDD
+;
+}
+.footer p {
+    margin: 0;
+}
+.footer img {
+    max-width: 100%;
+}
+.footer h3 {
+    border-bottom: 1px solid #BAC1C8
+;
+    color: #54697E
+;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 27px;
+    padding: 40px 0 10px;
+    text-transform: uppercase;
+}
+.footer ul {
+    font-size: 13px;
+    list-style-type: none;
+    margin-left: 0;
+    padding-left: 0;
+    margin-top: 15px;
+    color: #7F8C8D
+;
+}
+.footer ul li a {
+    padding: 0 0 5px 0;
+    display: block;
+}
+.footer a {
+    color: #78828D
+
+}
+
+
